# glsl_testfield

dgfpo/ex1_pygame_window/: base.py  input.py  test-2-1.py
dgfpo/ex2_draw_yellow_point/: base.py  test-2-2.py
dgfpo/ex3_draw_shapes/: demo-2-3.py
learn_opengl/01_create_window/: build.sh  main.cc
learn_opengl/02_hellotriangle/: main.cc
learn_opengl/03_shader_using_object/: main.cc
learn_opengl/04_texture/: default.frag  main.cc
learn_opengl/05_transformation/: build.sh  main.cc
learn_opengl/05_transformation/learnopengl/: model.h
learn_opengl/06_1_coordinate_system/: main.cc
learn_opengl/06_2_coordinate_system_3d/: main.cc
learn_opengl/07_1_camera_circle/: main.cc
learn_opengl/07_2_camera_explorer/: build.sh  main.cc
learn_opengl/07_3_camera_mouse_zoom/: main.cc
learn_opengl/08_1_colors/: README.md
learn_opengl/ADVANCED_05_1_framebuffer/: main.cc
learn_opengl/c_testfield/c_asm_embed/: main.c
learn_opengl/c_testfield/c_asm_inline/: main.c
learn_opengl/c_testfield/program_builtin/: Makefile  main.c  main2.c
learn_opengl/c_testfield/volatile/: build.sh  main.c
learn_opengl/model_loading/: build.sh  main.cc
optimization_solver/linear_programming/: docplex_solver.py  ortools_solver.py
optimization_solver/nonlinear_programming/: scipy_solver.py
optimization_solver/qp_problem/: gekko_solver.py
optimization_solver/quadratic_programming/: scipy_solver.py
trimesh_testfield/: pyproject.toml
trimesh_testfield/tool/: 00_quick_start.py  01_smpl_model.py  render.py
